# loris_framework_mips

./: .gitmodules  CMakeLists.txt  README.md  cleanup.sh  init.sh
files/: vmlinux
idl/: mod_vm_ADM5120.idl  mod_vm_MINI.idl  mod_vm_arch_MIPS.idl  mod_vm_arch_mips_cp0_CVM.idl  mod_vm_arch_mips_cp0_MINI.idl  mod_vm_arch_mips_cpu_CVM.idl  mod_vm_arch_mips_cpu_MINI.idl  mod_vm_device_ETH_CS8900.idl  mod_vm_device_GPIO.idl  (+11 more)
src/mod_vm/mod_vm_ADM5120/: CMakeLists.txt
src/mod_vm/mod_vm_ADM5120/private/conf/: adm5120.conf
src/mod_vm/mod_vm_ADM5120/private/include/: mod_vm_ADM5120.h  vm.h
src/mod_vm/mod_vm_ADM5120/private/script/: init_adm5120.nl  mod_vm_ADM5120_test.nl
src/mod_vm/mod_vm_ADM5120/private/src/: mod_vm_ADM5120.c  mod_vm_ADM5120_bundle.c
src/mod_vm/mod_vm_ADM5120/private/src/stub/: stub_shell_mod_vm_ADM5120.c
src/mod_vm/mod_vm_ADM5120/public/: desc.json
src/mod_vm/mod_vm_MINI/: CMakeLists.txt
src/mod_vm/mod_vm_MINI/private/include/: mod_vm_MINI.h  vm.h
src/mod_vm/mod_vm_MINI/private/script/: mod_vm_MINI_test.nl
src/mod_vm/mod_vm_MINI/private/src/: mod_vm_MINI.c  mod_vm_MINI_bundle.c
src/mod_vm/mod_vm_MINI/private/src/stub/: stub_shell_mod_vm_MINI.c
src/mod_vm/mod_vm_MINI/public/: desc.json
src/mod_vm_arch_mips_cpu/: CMakeLists.txt
src/mod_vm_arch_mips_cpu/mod_vm_arch_mips_cpu_CVM/: CMakeLists.txt
src/mod_vm_arch_mips_cpu/mod_vm_arch_mips_cpu_CVM/private/include/: cvm_arch_mips_cpu.h  dump_insn.h  host_alarm.h  mips64_jit.h  mod_vm_arch_mips_cpu_CVM.h  sbox.h  vp_clock.h  vp_timer.h
src/mod_vm_arch_mips_cpu/mod_vm_arch_mips_cpu_CVM/private/script/: mod_vm_arch_mips_cpu_CVM_test.nl
src/mod_vm_arch_mips_cpu/mod_vm_arch_mips_cpu_CVM/private/src/: cpu_mts.c  cvm_arch_mips_cpu.c  dump_insn.c  host_alarm.c  mips64_jit.c  mod_vm_arch_mips_cpu_CVM.c  mod_vm_arch_mips_cpu_CVM_bundle.c  sbox.c  vp_clock.c  vp_timer.c  x86_trans.c
src/mod_vm_arch_mips_cpu/mod_vm_arch_mips_cpu_CVM/private/src/stub/: stub_shell_mod_vm_arch_mips_cpu_CVM.c
src/mod_vm_arch_mips_cpu/mod_vm_arch_mips_cpu_CVM/public/: desc.json
src/mod_vm_arch_mips_cpu/mod_vm_arch_mips_cpu_MINI/: CMakeLists.txt
src/mod_vm_arch_mips_cpu/mod_vm_arch_mips_cpu_MINI/private/include/: cpu_mts.h  cvm_arch_mips_cpu.h  mips64_jit.h  mod_vm_arch_mips_cpu_MINI.h  x86_trans.h
src/mod_vm_arch_mips_cpu/mod_vm_arch_mips_cpu_MINI/private/script/: mod_vm_arch_mips_cpu_MINI_test.nl
src/mod_vm_arch_mips_cpu/mod_vm_arch_mips_cpu_MINI/private/src/: cpu_mts.c  cvm_arch_mips_cpu.c  dump_insn.c  mips64_jit.c  mod_vm_arch_mips_cpu_MINI.c  mod_vm_arch_mips_cpu_MINI_bundle.c  x86_trans.c
src/mod_vm_arch_mips_cpu/mod_vm_arch_mips_cpu_MINI/private/src/stub/: stub_shell_mod_vm_arch_mips_cpu_MINI.c
src/mod_vm_arch_mips_cpu/mod_vm_arch_mips_cpu_MINI/public/: desc.json
src/mod_vm_arch_mips_cpu/public/include/: mod_vm_arch_mips_cpu.h
src/mod_vm_device/mod_vm_device_ETH_CS8900/: CMakeLists.txt
src/mod_vm_device/mod_vm_device_ETH_CS8900/private/include/: dev_netio.h  mod_vm_device_ETH_CS8900.h
src/mod_vm_device/mod_vm_device_ETH_CS8900/private/src/: dev_netio.c  mod_vm_device_ETH_CS8900.c  mod_vm_device_ETH_CS8900_bundle.c
src/mod_vm_device/mod_vm_device_ETH_CS8900/private/src/stub/: stub_shell_mod_vm_device_ETH_CS8900.c
src/mod_vm_device/mod_vm_device_ETH_CS8900/public/: desc.json
src/mod_vm_device/mod_vm_device_INT/: CMakeLists.txt
src/mod_vm_device/mod_vm_device_INT/private/include/: mod_vm_device_INT.h
src/mod_vm_device/mod_vm_device_INT/private/src/: mod_vm_device_INT.c  mod_vm_device_INT_bundle.c
src/mod_vm_device/mod_vm_device_INT/private/src/stub/: stub_shell_mod_vm_device_INT.c
src/mod_vm_device/mod_vm_device_INT/public/: desc.json
src/mod_vm_device/mod_vm_device_NORFLASH4M/: CMakeLists.txt
src/mod_vm_device/mod_vm_device_NORFLASH4M/private/include/: mod_vm_device_NORFLASH4M.h
src/mod_vm_device/mod_vm_device_NORFLASH4M/private/src/: mod_vm_device_NORFLASH4M.c  mod_vm_device_NORFLASH4M_bundle.c
src/mod_vm_device/mod_vm_device_NORFLASH4M/private/src/stub/: stub_shell_mod_vm_device_NORFLASH4M.c
src/mod_vm_device/mod_vm_device_NORFLASH4M/public/: desc.json
src/mod_vm_device/mod_vm_device_SW/: CMakeLists.txt
src/mod_vm_device/mod_vm_device_SW/private/include/: mod_vm_device_SW.h
src/mod_vm_device/mod_vm_device_SW/private/src/: mod_vm_device_SW.c  mod_vm_device_SW_bundle.c
src/mod_vm_device/mod_vm_device_SW/private/src/stub/: stub_shell_mod_vm_device_SW.c
src/mod_vm_device/mod_vm_device_SW/public/: desc.json
src/mod_vm_device_manager/mod_vm_device_manager_CVM/: CMakeLists.txt
src/mod_vm_device_manager/mod_vm_device_manager_CVM/private/include/: mod_vm_device_manager_CVM.h
src/mod_vm_device_manager/mod_vm_device_manager_CVM/private/script/: mod_vm_device_manager_CVM_test.nl
src/mod_vm_device_manager/mod_vm_device_manager_CVM/private/src/: mod_vm_device_manager_CVM.c  mod_vm_device_manager_CVM_bundle.c
src/mod_vm_device_manager/mod_vm_device_manager_CVM/private/src/stub/: stub_shell_mod_vm_device_manager_CVM.c
src/mod_vm_device_manager/mod_vm_device_manager_CVM/public/: desc.json
src/mod_vm_memory/mod_vm_memory_MINI/: CMakeLists.txt
src/mod_vm_memory/mod_vm_memory_MINI/private/include/: cvm_memory_32.h  mod_vm_memory_MINI.h
src/mod_vm_memory/mod_vm_memory_MINI/private/script/: mod_vm_memory_MINI_test.nl
src/mod_vm_memory/mod_vm_memory_MINI/private/src/: cvm_memory_32.c  mod_vm_memory_MINI.c  mod_vm_memory_MINI_bundle.c
src/mod_vm_memory/mod_vm_memory_MINI/private/src/stub/: stub_shell_mod_vm_memory_MINI.c
src/mod_vm_memory/mod_vm_memory_MINI/public/: desc.json
src/mod_vm_memory/mod_vm_memory_m32/: CMakeLists.txt
src/mod_vm_memory/mod_vm_memory_m32/private/include/: cvm_memory_32.h  mod_vm_memory_m32.h
src/mod_vm_memory/mod_vm_memory_m32/private/script/: mod_vm_memory_m32_test.nl
src/mod_vm_memory/mod_vm_memory_m32/private/src/: cvm_memory_32.c  mod_vm_memory_m32.c  mod_vm_memory_m32_bundle.c
src/mod_vm_memory/mod_vm_memory_m32/private/src/stub/: stub_shell_mod_vm_memory_m32.c
src/mod_vm_memory/mod_vm_memory_m32/public/: desc.json
(+73 files in other folders)
